Fixed spacing issues with logo and logo text

--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ img {
 
 .logo {
     max-width: 300px;
+    margin-left: 6vw;
     /* filter: drop-shadow(3px 3px 0px white); */
 }
 
@@ -368,6 +369,7 @@ a {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        text-align: center;
     }
 
     .vl {
